<resources>
    <string name="app_name">Foody</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account?Sign up now</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="mobile_number_10_digits">Mobile Number (10 digits)</string>
    <string name="App_name">Foody</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="new_password_min_4_characters">New Password(Min. 4 characters)</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="home">Home</string>
    <string name="opendrawer">Open Drawer</string>
    <string name="closedrawer">Close Drawer</string>
    <string name="my_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q1">Q1.How will the training be delivered?</string>
    <string name="a1">A.1 You will be taught using pre-recodred videos and text tutorials. The training has quizzes, assignments, and tests to help you learn better. At the end of the traning,you will attempt a project to get hands-on practice of what you learn during your traning.</string>
    <string name="q2">Q.2What will be the timings of the training?</string>
    <string name="a2">A.2 As this is a purely online traning program, you can choose to learn at any time of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning hours can be decided by students according to their convenence.</string>
    <string name="q3">Q.3What is the duration of training?</string>
    <string name="a3">A.3The training duration is 6 weeks.</string>
    <string name="q4">Q.4How much time should I spend everyday?</string>
    <string name="a4">A.4We recommend spending 10-12 hours per week.However,the actual learning hours can be decided by you as per your convenience.</string>
    <string name="q5">Q.5When can I start my traning?</string>
    <string name="a5">A.5You can choose your prefeered batch date while signing up for the training program.</string>
    <string name="q6">Q.6When will I get the certificate?</string>
    <string name="a6">A.6You will be able to download the certificate once you complete your training and take the final test.</string>
    <string name="menudetails">Choose from menu listed below:</string>
    <string name="my_cart">My Cart</string>
    <string name="ordering_from">Ordering From:</string>
</resources>
