<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.faq">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/q1"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/a1"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp" />
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#000"/>


            <TextView
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/q2"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/a2"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/q3"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/a3"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/q4"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/a4"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/q5"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/a5"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:text="@string/q6"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
            <TextView
                android:layout_width="match_parent"
                android:textColor="#000"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/a6"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>