<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcomepagebackground"
    tools:context=".activity.otp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/otptoolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/enter_otp"
        app:titleTextColor="#fff" />

    <EditText
        android:hint="@string/otp_4_characters"
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:textColorHint="@color/colorhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otptoolbar" />

    <EditText
        android:hint="@string/new_password_min_4_characters"
        android:id="@+id/otpnewpassord"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:textColorHint="@color/colorhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <EditText
        android:id="@+id/otpconfirmpassword"
android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:textColorHint="@color/colorhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpnewpassord" />

    <Button
        android:id="@+id/otpsubmitbutton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="Submit"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpconfirmpassword" />
</androidx.constraintlayout.widget.ConstraintLayout>