<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/welcomepagebackground"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">


    <TextView
    android:id="@+id/loginappname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:text="@string/App_name"
    android:textAlignment="center"
    android:textColor="#fff"
    android:textSize="50sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginnumber"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="5dp"
        android:hint="Mobile Number(10 digits)"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingLeft="5dp"
        android:textColor="#000"
        android:textColorHint="#A4B0BD"
        app:layout_constraintTop_toBottomOf="@+id/loginappname"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="#fff"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:hint="Password"
        android:paddingLeft="5dp"
        android:inputType="numberPassword"
        android:textColorHint="#A4B0BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginnumber" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@color/loginbutton"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword" />

    <TextView
        android:id="@+id/loginforget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />


    <TextView
        android:id="@+id/loginregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>